# wave-propagation

./: .gitignore  .gitmodules  LICENSE  README.md  SSPade.py  WPDefs.py  pyproject.toml  setup.py
docs/: index.html  requirements.txt
docs/source/: about.rst  apireference.rst  conf.py  examples.rst  index.rst  installation.rst  knife_edge.rst  migration.rst  propagators.rst  rwp.rst  uwa.rst
examples/: README.md  elevated_duct_ex.py  nb1.py  petool_wrapper_example.ipynb  std_troposphere.py
examples/3d/: dispersion.py  ex1.py  ex2.py  tworay.py  utils.py
experimental/: grid_optimizer.py  helmholtz_jax.py  rwp_jax.py  utils.py  uwa_jax.py
propagators/: _cn_utils.pyx  _utils.py  dispersion_relations.pyx  field.py  long_running_tests.py  math_utils.py  mfp.py  sspade.py  tests.py  ts.py  utils.py  vis.py  wavenumber.py
pywaveprop/: grid_optimizer.py  helmholtz_jax.py  rwp_field.py  rwp_jax.py  uwa_jax.py
rwp/: SSPade.py  SSPade3d.py  WPDefs.py  WPVis.py  _utils.py  antennas.py  contfrac.pyx  crank_nicolson.py  environment.py  field.py  kediffraction.py  long_running_tests.py  petool.py  propagators.pyx  ssf.py  sspade.py  task.py  terrain.py  tests.py  tropospheric_attenuation.py  tworay.py  urban.py  vis.py
scripts/: analyse_jax_vs_ram.py  debug_beta_het.py  debug_dx_dependence.py  debug_single_step.py  plot_jax_vs_ram_2d.py  plot_munk_deep.py  plot_tl_vs_range.py
tests/rwp/: tests.py  (+1 more)
transforms/: __init__.py  fcc.py  frft.py  setup.py  tests.py  z_transform.py
uwa/: environment.py  field.py  propagators.py  ram.py  source.py  sspade.py  utils.py  vis.py
(+258 files in other folders)
